Fix spacing

--- a/assets/blocks/course-outline/style.editor.scss
+++ b/assets/blocks/course-outline/style.editor.scss
@@ -40,7 +40,7 @@ $dark-gray: #1a1d20;
 	.wp-block-sensei-lms-course-outline-lesson {
 
 		&__input[type="text"] {
-			margin: 20px 25px;
+			margin: 20px 16px;
 		}
 
 		&__draft,
